# rg2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cbuild.sh  pyproject.toml  requirements.txt  setup.py
build_scripts/: create_venv.sh  version_example.sh  warm_build.sh
examples/: cleanrl_sac.py  run_unitenv.py  runner.py
rg2/: __init__.py
rg2/clis/: cli_inits.py
rg2/csrc/: Common.hpp  Env.cpp  Env.hpp  README.md  Reward.hpp  VecEnvWrapper.hpp  binding.cpp
rg2/csrc/include/: WalkerEnv.hpp
rg2/csrc/src/: WalkerEnv.cpp  WalkerEnvAugmentor.cpp  WalkerEnvEvaluator.cpp
rg2/gym/: __init__.py  singlegym.py  vecgym.py
rg2/rg2/: __init__.py
rg2/utils/: config.py
src/csrc/: Reward.hpp  VecEnvWrapper.hpp  binding.cpp
src/rg2/: __init__.py
stubs/rg2/bin-stubs/: __init__.pyi
stubs/rg2/bin-stubs/_rg2/: __init__.pyi
tests/: test_cenv.py  test_config_obj.py  test_env.py
